myteo/test/parser/ast/type/function_empty_type_params.exp
Error: Unexpected token `>`, expected identifier
test/parser/ast/type/function_empty_type_params.myte:3:16
 3 | type alias t = <>((Int)) -> String
   |                 ^